// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/DismissButtonPresenter renders with all props 1`] = `
<div
  className="hig__notification-v1__dismiss-button"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="HELLO"
  >
    <span
      className="hig__icon-button__icon"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
          }
        }
      />
    </span>
  </button>
</div>
`;

exports[`notifications-flyout/presenters/DismissButtonPresenter renders without props 1`] = `
<div
  className="hig__notification-v1__dismiss-button"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    onBlur={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Dismiss featured notification"
  >
    <span
      className="hig__icon-button__icon"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
          }
        }
      />
    </span>
  </button>
</div>
`;
